--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "ghpages": "gh-pages -d dist",
     "predeploy": "nuxt build && nuxt generate",
-    "deploy": "gh-pages -d dist",
+    "deploy": "yarn ghpages",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint": "yarn lint:js"
   },
