--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "ghpages": "gh-pages -d dist",
+    "ghpages": "gh-pages -d dist -t true",
     "predeploy": "nuxt build && nuxt generate",
     "deploy": "yarn ghpages",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
